--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "iconv-lite": "^0.4.15",
-    "rmdir-sync": "^1.0.1"
+    "rmdir-sync": "^1.0.1",
+    "xml2js": "^0.4.17"
   },
   "keywords": [
     "homebridge-plugin",
